<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_card_membership_black_24dp"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_style_black_24dp"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_insurance"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/menu_insurance" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
